--- a/Organizer.html
+++ b/Organizer.html
@@ -47,10 +47,9 @@
 <body class="u-body u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-header" id="sec-2bff">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <nav class="u-align-center u-menu u-menu-dropdown u-offcanvas u-menu-1">
-        <div class="menu-collapse u-custom-font u-font-arial"
-          style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 700;">
-          <a class="u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-borders u-custom-color u-custom-hover-border-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+      <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
+        <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
+          <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
             href="#">
             <svg class="u-svg-link" viewBox="0 0 24 24">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use>
@@ -75,7 +74,7 @@
                 class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
                 href="#" style="padding: 10px 20px;">Task</a>
               <div class="u-nav-popup">
-                <ul class="u-nav u-unstyled u-v-spacing-13">
+                <ul class="u-nav u-unstyled u-v-spacing-13 u-nav-2">
                   <li class="u-nav-item"><a class="u-button-style u-nav-link"
                       href="Task1-Cine-reconstruction.html">Task1:Cine reconstruction</a>
                   </li>
@@ -87,7 +86,7 @@
             </li>
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
-                href="Data.html" style="padding: 10px 20px;">Data</a>
+                href="Challenge.html" style="padding: 10px 20px;">Data</a>
             </li>
             <li class="u-nav-item"><a
                 class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
@@ -108,17 +107,17 @@
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Task</a>
                   <div class="u-nav-popup">
-                    <ul class="u-nav u-unstyled u-v-spacing-13">
+                    <ul class="u-nav u-unstyled u-v-spacing-13 u-nav-4">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link"
-                          href="Task1-Cine-reconstruction.html">Task1:Cine reconstruction</a>
+                          href="Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Task2-T1-T2-mapping.html">Task2:
-                          T1/T2 mapping</a>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Task2-T1-T2-mapping.html">Task2
+                          T1 T2 mapping</a>
                       </li>
                     </ul>
                   </div>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Data.html">Data</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Challenge.html">Data</a>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Organizer.html">Organizer</a>
                 </li>
@@ -134,42 +133,17 @@
         data-image-width="614" data-image-height="550">
     </div>
   </header>
-  <section class="u-clearfix u-section-1" id="sec-04b6">
+  <section class="u-clearfix u-section-1" id="sec-e0e7">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
-        <div class="u-gallery-inner u-gallery-inner-1">
-          <div class="u-effect-fade u-gallery-item">
-            <div class="u-back-slide" data-image-width="1024" data-image-height="1024">
-              <img class="u-back-image u-expanded"
-                src="images/ChengyanWang_jigsaw_puzzle_broken_heart_rich_colors_showcasing__4c311c2f-85b8-4b3d-b93a-ec000b772a57.png">
-            </div>
-            <div class="u-over-slide u-shading u-over-slide-1">
-              <h3 class="u-gallery-heading"></h3>
-              <p class="u-gallery-text"></p>
-            </div>
-          </div>
-          <div class="u-effect-fade u-gallery-item">
-            <div class="u-back-slide" data-image-width="1024" data-image-height="1024">
-              <img class="u-back-image u-expanded"
-                src="images/ChengyanWang_A_doctor_is_scanning_a_patients_heart_with_magneti_a692d88a-067f-4c0d-8cbb-ef764946ea9a.png">
-            </div>
-            <div class="u-over-slide u-shading u-over-slide-2">
-              <h3 class="u-gallery-heading"></h3>
-              <p class="u-gallery-text"></p>
-            </div>
-          </div>
-          <div class="u-effect-fade u-gallery-item">
-            <div class="u-back-slide" data-image-width="1024" data-image-height="1024">
-              <img class="u-back-image u-expanded"
-                src="images/ChengyanWang_jigsaw_puzzle_scanner_rich_colors_showcasing_a_sen_9a481ffc-071b-45d7-a148-cabea02705f5.png">
-            </div>
-            <div class="u-over-slide u-shading u-over-slide-3">
-              <h3 class="u-gallery-heading"></h3>
-              <p class="u-gallery-text"></p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <img class="u-image u-image-default u-image-1"
+        src="images/ChengyanWang_A_doctor_is_scanning_a_patients_heart_with_magneti_a692d88a-067f-4c0d-8cbb-ef764946ea9a.png"
+        alt="" data-image-width="1024" data-image-height="1024">
+      <img class="u-image u-image-default u-image-2"
+        src="images/ChengyanWang_jigsaw_puzzle_scanner_rich_colors_showcasing_a_sen_9a481ffc-071b-45d7-a148-cabea02705f5.png"
+        alt="" data-image-width="1024" data-image-height="1024">
+      <img class="u-image u-image-default u-image-3"
+        src="images/ChengyanWang_jigsaw_puzzle_broken_heart_rich_colors_showcasing__4c311c2f-85b8-4b3d-b93a-ec000b772a57.png"
+        alt="" data-image-width="1024" data-image-height="1024">
     </div>
   </section>
   <section class="u-clearfix u-section-2" id="sec-9e84">
